--- a/client/src/components/SearchResult/style.css
+++ b/client/src/components/SearchResult/style.css
@@ -6,8 +6,12 @@
   overflow-x: hidden;
 }
 
+.card {
+  margin-bottom: 5px;
+}
+
 .list-overflow-container ul {
-  margin: 0;
+  margin: 0 5 0 0;
 }
 
 .list-overflow-container li {
