--- a/client/src/components/SearchResult/style.css
+++ b/client/src/components/SearchResult/style.css
@@ -35,3 +35,74 @@
 .list-overflow-container li:last-child {
   border-bottom: none;
 }
+
+.btn {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.btn.btn-primary:hover,
+.btn.btn-primary:focus,
+.btn.btn-primary:active,
+.btn.btn-primary.active {
+  color: #ffffff;
+  background-color: #DB4437 !important;
+  border-color: #DB4437 !important;
+}
+.submit {
+  background-color: #DB4437 !important;
+  color: white;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: 700;
+  display: inline-block;
+  text-align: center;
+  white-space: nowrap;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 1rem;
+  font-size: 1rem;
+  border-radius: .25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  text-transform: none;
+  overflow: visible;
+  margin: 5px;
+  box-sizing: border-box;
+}
+
+.saved {
+  background-color: #4285f4;
+  color: white;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.view {
+  background-color: #F4B400;
+  color: white;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.bookImage {
+  background-size: cover;
+  height: 50%;
+  width: 50%;
+}
+
+.emptyCol {
+
+}
+
+.bookInfo {
+
+}
+
+h3 {
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+font-size: 2rem;
+}
+
+h4 {
+
+}
+
+p {
+
+}
